--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="tag">
     <h1>This Is Webpage consists Nav bar</h1>
     <p>Only html and css was used</p>
+    <p>It is Mobile friendly and responsive</p>
     </div>
 </body>
 </html>
